--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ anchorjs: true # if you want to customize anchor. check out line:181 of `post.ht
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 
 # Markdown settings
 # replace redcarpet to kramdown,
@@ -51,7 +51,6 @@ gitalk:
   enable: false #是否开启Gitalk评论
   clientID: a844a6c5258ebd8b0119 #生成的clientID
   clientSecret: 52566538eec7caddcbd234fabcc1326c899a1011 #生成的clientSecret
-  repo: ricardopangj.github.io #仓库名称
   owner: ricardopangj #github用户名
   admin: ricardopangj
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
