更新 Jekyll 和 Webrick 版本，修复 Vercel 部署问题

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,10 @@
   "buildCommand": "jekyll build",
   "outputDirectory": "_site",
   "framework": "jekyll",
-  "installCommand": "bundle install"
+  "installCommand": "bundle install",
+  "env": {
+    "BUNDLE_GEMFILE": "Gemfile",
+    "JEKYLL_ENV": "production",
+    "RUBY_DEBUG_LOGGER_LEVEL": "WARN"
+  }
 }
