修复 Vercel 部署问题：更新 Jekyll 版本，修复模板语法和编码问题

--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,8 @@
   "env": {
     "BUNDLE_GEMFILE": "Gemfile",
     "JEKYLL_ENV": "production",
-    "RUBY_DEBUG_LOGGER_LEVEL": "WARN"
+    "RUBY_DEBUG_LOGGER_LEVEL": "WARN",
+    "LANG": "en_US.UTF-8",
+    "LC_ALL": "en_US.UTF-8"
   }
 }
